--- a/buffrag/requirements-txt.txt
+++ b/buffrag/requirements-txt.txt
@@ -1,36 +1,18 @@
-# transformers
-# SerpAPIWrapper
-# qdrant-client
-# google-search-results
-# datasets
-# serpapi
-# tiktoken
-# loralib
-# pypdf
-# sentencepiece
-# bitsandbytes
-# accelerate
-# einops
-# faiss-gpu
-# chromadb
-# bs4
-# langchainhub
-# wikipedia
-# arxiv
-# pymupdf
-# openai
-# xmltodict
-# langchain
-# langchain_openai
-# langchain_community
-# protobuf
-
-# File: requirements.txt
 langchain==0.0.184
-openai==0.27.0
+langchain_openai==0.0.2
+PyPDF2==3.0.1
+langchain_community==0.0.3
+openai==0.27.8
+python-dotenv==1.0.0
 qdrant-client==1.1.1
-serpapi==0.1.3
+google-search-results==2.4.2
+ipywidgets==8.0.4
 spacy==3.5.0
 nltk==3.8.1
-ipywidgets==8.0.4
-PyPDF2==3.0.1
+numpy==1.24.3
+pandas==1.5.3
+matplotlib==3.7.1
+seaborn==0.12.2
+scikit-learn==1.2.2
+torch==2.0.0
+transformers==4.28.1
